[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "wn-rack"
version = "0.1.0"
description = "Strata-based pytest orchestration, suite manifests, and HTML reporting."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["pytest", "testing", "reporting", "toml", "traceability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pytest>=8.0.0",
    "pytest-json-report>=1.5.0",
    "tomli-w>=1.2.0",
]

[project.scripts]
rack = "rack.cli:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/rack"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/docs",
    "/README.md",
    "/LICENSE",
]
